Visibility issue fixed

--- a/rick-and-morty/src/components/Characters/style.scss
+++ b/rick-and-morty/src/components/Characters/style.scss
@@ -1,5 +1,11 @@
 @import '~style/mixin';
 
+body.filters-active {
+  .content {
+    display: none;
+  }
+}
+
 .content {
   flex: 1;
   height: max-content;
